<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarDespesa" >    

    <TextView
        android:id="@+id/txtTituloListaDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_despesa_conta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tblDespesa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" >

            <TextView
                style="@style/CellText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/lbl_despesa"
                android:textStyle="bold" />

            <TextView
                style="@style/CellText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/lbl_valor"
                android:textStyle="bold" />

            <TextView
                style="@style/CellText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/lbl_user"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                style="@style/CellText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/lbl_quant"
                android:textStyle="bold" />

        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btn_nova_despesa"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</LinearLayout>
